feat: no allocation access of int, long, double from a JSON number node